# ExercisesCpp

./: CMakeLists.txt  README.md
2-10/: CapitalIndexes.cpp  MiddleLetter.cpp  TypeCheck.cpp
3-10/: AddingRemovingDots.cpp  Anagrams.cpp  CountingSyllables.cpp  FlattenAList.cpp
4-10/: AllEqual.cpp  ConsecutiveZeros.cpp  Palindrome.cpp  TicTacToeInput.cpp  UpAndDown.cpp
5-10/: Convert.cpp  CustomZip.cpp  ThousandsSeparator.cpp
Easy/: OnlineStatus.cpp  Randomness.cpp
Medium/: DivisibleBy3.cpp  DoubleLetters.cpp  MinMaxing.cpp
